# meshmonk

./: .gitignore  README.md  conanfile.py  meson.build  meson_options.txt
builds/OlderVersions/: README.md
builds/macOS/: README.md  libOpenMeshCore.dylib  libOpenMeshTools.dylib  libmeshmonk.dylib
builds/macOS/arm64/: libOpenMeshCore.dylib  libOpenMeshTools.dylib  libmeshmonk.dylib
docs/: osx.md
